metadata/sf-prod/force-app/main/default/objects/Lead/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If the Lead is associated with an existing Account, let&apos;s create a relationship so it&apos;s easier to track.</description>
    <inlineHelpText>If the Lead is associated with an existing customer, link the Account record here.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>