metadata/sf-prod/force-app/main/default/objects/Lead/fields/Always_True__c.field-meta.xml
<CustomField>
    <fullName>Always_True__c</fullName>
    <description>This field serves to map in opportunity the field Created From Lead.</description>
    <formula>true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Always True</label>
    <type>Checkbox</type>
</CustomField>