metadata/sf-prod/force-app/main/default/objects/Lead/fields/Calendly__CalendlyCreated__c.field-meta.xml
<CustomField>
    <fullName>Calendly__CalendlyCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CalendlyCreated</label>
    <type>Checkbox</type>
</CustomField>