metadata/sf-prod/force-app/main/default/objects/Lead/fields/CloudFix_Scanned_AWS_Spend__c.field-meta.xml
<CustomField>
    <fullName>CloudFix_Scanned_AWS_Spend__c</fullName>
    <description>To track the AWS spend of a CloudFix user when they connect CloudFix to their AWS account. This might be different from their self reported AWS spend, tracked in the AWS Spend field.</description>
    <inlineHelpText>To track the AWS spend of a CloudFix user when they connect CloudFix to their AWS account. This might be different from their self reported AWS spend, tracked in the AWS Spend field.</inlineHelpText>
    <label>CloudFix Scanned AWS Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>