metadata/sf-prod/force-app/main/default/objects/Lead/fields/Company_LinkedIn_Profile__c.field-meta.xml
<CustomField>
    <fullName>Company_LinkedIn_Profile__c</fullName>
    <description>URL link to the LinkedIn profile of the company the individual is associated with.</description>
    <inlineHelpText>URL link to the LinkedIn profile of the company the individual is associated with.</inlineHelpText>
    <label>Company LinkedIn Profile</label>
    <type>Url</type>
</CustomField>