metadata/sf-prod/force-app/main/default/objects/Lead/fields/Conversion_URL__c.field-meta.xml
<CustomField>
    <fullName>Conversion_URL__c</fullName>
    <description>Marketing attribution model</description>
    <label>Conversion URL</label>
    <type>Url</type>
</CustomField>