metadata/sf-prod/force-app/main/default/objects/Lead/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>Field mapped to standard Department field on Contact object</description>
    <label>Department</label>
    <length>80</length>
    <type>Text</type>
</CustomField>