metadata/sf-prod/force-app/main/default/objects/Lead/fields/External_Referrer__c.field-meta.xml
<CustomField>
    <fullName>External_Referrer__c</fullName>
    <inlineHelpText>Populated if the Lead came to us via an external referrer such as Google, Bing, Yahoo Search, Facebok, etc (and this information is available)</inlineHelpText>
    <label>External Referrer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>