metadata/sf-prod/force-app/main/default/objects/Lead/fields/First_Touch__c.field-meta.xml
<CustomField>
    <fullName>First_Touch__c</fullName>
    <description>Marketing attribution model</description>
    <label>First Touch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Conversion_Touch</valueSetName>
    </valueSet>
</CustomField>