metadata/sf-prod/force-app/main/default/objects/Lead/fields/First_UTM_Content__c.field-meta.xml
<CustomField>
    <fullName>First_UTM_Content__c</fullName>
    <description>Marketing attribution model</description>
    <label>First UTM Content</label>
    <length>200</length>
    <type>Text</type>
</CustomField>