metadata/sf-prod/force-app/main/default/objects/Lead/fields/Form_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Form_Submitted__c</fullName>
    <description>Last web form submitted by the person</description>
    <inlineHelpText>Last web form submitted by the person</inlineHelpText>
    <label>Form Submitted</label>
    <length>200</length>
    <type>Text</type>
</CustomField>