metadata/sf-prod/force-app/main/default/objects/Lead/fields/Incoming_Type__c.field-meta.xml
<CustomField>
    <fullName>Incoming_Type__c</fullName>
    <description>MQL (Executes pre-trial sequence)
SQL (Executes New Trial sequence)</description>
    <inlineHelpText>MQL (Executes pre-trial sequence)
SQL (Executes New Trial sequence)</inlineHelpText>
    <label>Incoming Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>MQL</fullName>
            </value>
            <value>
                <fullName>SQL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>