metadata/sf-prod/force-app/main/default/objects/Lead/fields/Internal_Referrer__c.field-meta.xml
<CustomField>
    <fullName>Internal_Referrer__c</fullName>
    <inlineHelpText>From which internal resource did the lead enter Salesforce: link to the landing page or if came from a call then a link to the logged call task or link to the logged email task if referred via email.</inlineHelpText>
    <label>Internal Referrer</label>
    <type>Url</type>
</CustomField>