metadata/sf-prod/force-app/main/default/objects/Lead/fields/Lead_Source_Detail__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Detail__c</fullName>
    <description>Provides additional details for lead source for more granular reporting</description>
    <inlineHelpText>Provides additional details for lead source for more granular reporting</inlineHelpText>
    <label>Lead Source Detail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lead_Source_Detail</valueSetName>
    </valueSet>
</CustomField>