metadata/sf-prod/force-app/main/default/objects/Lead/fields/Lead_Status_Detail__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status_Detail__c</fullName>
    <description>Additional details, e.g. why a lead was recycled</description>
    <inlineHelpText>Additional details, e.g. why a lead was recycled</inlineHelpText>
    <label>Lead Status Detail</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Already engaged with Aurea AE</fullName>
            </value>
            <value>
                <fullName>FedRamp Limitations</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Student/Professor</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Working with alternative contact</fullName>
            </value>
            <value>
                <fullName>No AWS</fullName>
            </value>
            <value>
                <fullName>AWS Spend &lt;$100k/year</fullName>
            </value>
            <value>
                <fullName>Bad Data</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Not Appropriate Contact</fullName>
            </value>
            <value>
                <fullName>Not a Fit</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Opted Out</fullName>
            </value>
            <value>
                <fullName>No Longer with Company</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
            <value>
                <fullName>Do Not Call</fullName>
            </value>
            <value>
                <fullName>Test Lead</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>