metadata/sf-prod/force-app/main/default/objects/Lead/fields/LinkedInUrl__c.field-meta.xml
<CustomField>
    <fullName>LinkedInUrl__c</fullName>
    <description>URL of individual&apos;s LinkedIn profile.</description>
    <inlineHelpText>URL of individual&apos;s LinkedIn profile.</inlineHelpText>
    <label>LinkedIn Profile</label>
    <type>Url</type>
</CustomField>