metadata/sf-prod/force-app/main/default/objects/Lead/fields/MAL_Date__c.field-meta.xml
<CustomField>
    <fullName>MAL_Date__c</fullName>
    <description>Important to track progress through Marketing funnel</description>
    <label>MAL Date</label>
    <type>Date</type>
</CustomField>