metadata/sf-prod/force-app/main/default/objects/Lead/fields/Migrated_Aurea_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>Migrated_Aurea_SF_ID__c</fullName>
    <description>ID of the Lead in Aurea TEBS SFDC</description>
    <externalId>true</externalId>
    <label>Migrated Aurea SF ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>