metadata/sf-prod/force-app/main/default/objects/Lead/fields/MQL_Date__c.field-meta.xml
<CustomField>
    <fullName>MQL_Date__c</fullName>
    <description>Important to track progress through Marketing funnel</description>
    <label>MQL Date</label>
    <type>Date</type>
</CustomField>