metadata/sf-prod/force-app/main/default/objects/Lead/fields/Outreach_Current_Sequence_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Current_Sequence_Due_Date__c</fullName>
    <label>Outreach Current Sequence Due Date</label>
    <type>Date</type>
</CustomField>