metadata/sf-prod/force-app/main/default/objects/Lead/fields/Outreach_Current_Sequence_Status__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Current_Sequence_Status__c</fullName>
    <label>Outreach Current Sequence Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>