metadata/sf-prod/force-app/main/default/objects/Lead/fields/Outreach_Current_Sequence_Step_Number__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Current_Sequence_Step_Number__c</fullName>
    <label>Outreach Current Sequence Step Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>