metadata/sf-prod/force-app/main/default/objects/Lead/fields/Outreach_Current_Sequence_Step_Type__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Current_Sequence_Step_Type__c</fullName>
    <label>Outreach Current Sequence Step Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>