metadata/sf-prod/force-app/main/default/objects/Lead/fields/Outreach_Current_Sequence_User__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Current_Sequence_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outreach Current Sequence User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Outreach_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>