metadata/sf-prod/force-app/main/default/objects/Lead/fields/Outreach_Stage__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Stage__c</fullName>
    <label>Outreach Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Outreach_Stage</valueSetName>
    </valueSet>
</CustomField>