metadata/sf-prod/force-app/main/default/objects/Lead/fields/Outreach_URL__c.field-meta.xml
<CustomField>
    <fullName>Outreach_URL__c</fullName>
    <label>Outreach URL</label>
    <type>Url</type>
</CustomField>