metadata/sf-prod/force-app/main/default/objects/Lead/fields/Product_Custom_Data__c.field-meta.xml
<CustomField>
    <fullName>Product_Custom_Data__c</fullName>
    <description>Any additional data about the lead. Used for any additional form fields that don&apos;t fall into other categories.</description>
    <inlineHelpText>Any additional data about the lead. Used for any additional form fields that don&apos;t fall into other categories.</inlineHelpText>
    <label>Product Custom Data</label>
    <length>255</length>
    <type>Text</type>
</CustomField>