metadata/sf-prod/force-app/main/default/objects/Lead/fields/Product_Edition__c.field-meta.xml
<CustomField>
    <fullName>Product_Edition__c</fullName>
    <description>If the lead is for a specific product edition from the product family</description>
    <inlineHelpText>If the lead is for a specific product edition from the product family</inlineHelpText>
    <label>Product Edition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>