metadata/sf-prod/force-app/main/default/objects/Lead/fields/Related_Lead__c.field-meta.xml
<CustomField>
    <fullName>Related_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If this Lead was referred by another Lead or the two leads are connected in some other way, link them together.</description>
    <inlineHelpText>If this Lead was referred by another Lead or the two leads are connected in some other way, link them together and add a comment to the Description field.</inlineHelpText>
    <label>Related Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Related Leads</relationshipLabel>
    <relationshipName>Related_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>