metadata/sf-prod/force-app/main/default/objects/Lead/fields/Rep_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Rep_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field use by the Lead Assigner. See AssignRepBatch apex class. The assigner runs on leads that have this field unchecked.</description>
    <label>Rep Assigned</label>
    <type>Checkbox</type>
</CustomField>