metadata/sf-prod/force-app/main/default/objects/Lead/fields/Set_Google_Timezone__c.field-meta.xml
<CustomField>
    <fullName>Set_Google_Timezone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Set Google Timezone</label>
    <type>Checkbox</type>
</CustomField>