metadata/sf-prod/force-app/main/default/objects/Lead/fields/Target_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Close_Date__c</fullName>
    <inlineHelpText>Date when we expect this lead to either be converted into an opportunity or sent to one of the terminal states.</inlineHelpText>
    <label>Target Close Date</label>
    <type>Date</type>
</CustomField>