metadata/sf-prod/force-app/main/default/objects/Lead/fields/Team_Size__c.field-meta.xml
<CustomField>
    <fullName>Team_Size__c</fullName>
    <inlineHelpText>The size of this individual&apos;s team (as opposed to the overall no. of employees in the company)</inlineHelpText>
    <label>Team Size</label>
    <length>50</length>
    <type>Text</type>
</CustomField>