metadata/sf-prod/force-app/main/default/objects/Lead/fields/Trial_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Trial_End_Date__c</fullName>
    <formula>Trial_Start_Date__c + 14</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trial End Date</label>
    <type>Date</type>
</CustomField>