metadata/sf-prod/force-app/main/default/objects/Lead/fields/User_Browser__c.field-meta.xml
<CustomField>
    <fullName>User_Browser__c</fullName>
    <label>User Browser</label>
    <length>255</length>
    <type>Text</type>
</CustomField>