metadata/sf-prod/force-app/main/default/objects/Lead/fields/UTC_Offset__c.field-meta.xml
<CustomField>
    <fullName>UTC_Offset__c</fullName>
    <label>UTC Offset</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>