metadata/sf-prod/force-app/main/default/objects/Lead/fields/UTM_Medium__c.field-meta.xml
<CustomField>
    <fullName>UTM_Medium__c</fullName>
    <label>UTM_Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>