metadata/sf-prod/force-app/main/default/objects/Lead/fields/X18_Digital_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Digital_ID__c</fullName>
    <description>To do lookup functions with exported data in Gsheets or Excel.</description>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>To do lookup functions with exported data in Gsheets or Excel.</inlineHelpText>
    <label>18 Digital ID</label>
    <type>Text</type>
</CustomField>