metadata/sf-prod/force-app/main/default/objects/Lead/recordTypes/CloudFix.recordType-meta.xml
<RecordType>
    <fullName>CloudFix</fullName>
    <active>true</active>
    <businessProcess>CloudFix</businessProcess>
    <label>CloudFix</label>
</RecordType>