metadata/sf-prod/force-app/main/default/objects/Lead/listViews/CloudFix_RightSpend_Lead.listView-meta.xml
<ListView>
    <fullName>CloudFix_RightSpend_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>CloudFix RightSpend</label>
    <queue>CloudFix_RightSpend</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>