metadata/sf-prod/force-app/main/default/objects/Lead/listViews/EngineYard.listView-meta.xml
<ListView>
    <fullName>EngineYard</fullName>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
        <value>EngineYard</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>MQL Engagement,MQL Engaged,Trial Engagement</value>
    </filters>
    <label>EngineYard</label>
</ListView>