metadata/sf-prod/force-app/main/default/objects/Lead/listViews/Infinio.listView-meta.xml
<ListView>
    <fullName>Infinio</fullName>
    <columns>Product__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
        <value>Infinio</value>
    </filters>
    <label>Infinio</label>
</ListView>