metadata/sf-prod/force-app/main/default/objects/Lead/listViews/Kayako.listView-meta.xml
<ListView>
    <fullName>Kayako</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
        <value>Kayako</value>
    </filters>
    <label>Kayako</label>
</ListView>