metadata/sf-prod/force-app/main/default/objects/Lead/listViews/Open_Leads_by_User.listView-meta.xml
<ListView>
    <fullName>Open_Leads_by_User</fullName>
    <columns>Product__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Andrea</value>
    </filters>
    <label>Open Leads by User</label>
</ListView>