metadata/sf-prod/force-app/main/default/objects/Lead/listViews/XO_Hire_Research_Leads.listView-meta.xml
<ListView>
    <fullName>XO_Hire_Research_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Account__c</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.COUNTRY</columns>
    <columns>Timezone__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Research</value>
    </filters>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
        <value>XO Hire</value>
    </filters>
    <label>XO Hire Research Leads</label>
</ListView>