metadata/sf-prod/force-app/main/default/objects/Lead/listViews/XO_Hire_Trials.listView-meta.xml
<ListView>
    <fullName>XO_Hire_Trials</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Account__c</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
        <value>XO Hire</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>New Trial,Trial Engagement,Engaged</value>
    </filters>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Aron</value>
    </filters>
    <label>XO Hire Trials</label>
    <sharedTo>
        <group>XO_Hire_Team</group>
    </sharedTo>
</ListView>